# vscode-1

./: .dockerignore  Dockerfile  Dockerfile.pty  product.json  start.sh
.github/workflows/: build-serve-web.yml
extensions/cmux/: package-lock.json  package.json  tsconfig.json
extensions/cmux/src/: extension.ts
patches/: command-center-label.diff  default-chat-agent.diff  disable-cors.diff  openvsx-gallery.diff  series  workbench-defaults.diff
pty-server/: pty_server.py  pyproject.toml
