[project]
name = "pty-server"
version = "0.1.0"
description = "WebSocket PTY server for VSCode terminal backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "ptyprocess>=0.7.0",
]

[project.scripts]
pty-server = "pty_server:main"
